kubernetes/overlays/homelab/infrastructure/external-secrets/_rendered/manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/managed-by: argocd
    app.kubernetes.io/name: external-secrets
    platform.io/consume.controlplane-egress: "true"
    platform.io/consume.monitoring-scrape: "true"
    platform.io/consume.vault-secrets: "true"
    platform.io/network-interface-version: v1
    platform.io/network-profile: managed
    platform.io/provide.monitoring-scrape: "true"
    platform.io/vault-ca-distribution: skip
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
  name: external-secrets
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: external-secrets
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: external-secrets-webhook
    app.kubernetes.io/version: v2.0.1
    external-secrets.io/component: webhook
    helm.sh/chart: external-secrets-2.0.1
  name: external-secrets-webhook
  namespace: external-secrets
spec:
  ports:
    - name: webhook
      port: 443
      protocol: TCP
      targetPort: webhook
  selector:
    app.kubernetes.io/instance: external-secrets
    app.kubernetes.io/name: external-secrets-webhook
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: external-secrets
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: external-secrets
    app.kubernetes.io/version: v2.0.1
    helm.sh/chart: external-secrets-2.0.1
  name: external-secrets
  namespace: external-secrets
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: external-secrets
      app.kubernetes.io/name: external-secrets
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: external-secrets
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: external-secrets
        app.kubernetes.io/version: v2.0.1
        helm.sh/chart: external-secrets-2.0.1
        platform.io/capability-provider.monitoring-scrape: "true"
    spec:
      automountServiceAccountToken: true
      containers:
        - args:
            - --enable-cluster-store-reconciler=false
            - --enable-cluster-external-secret-reconciler=false
            - --enable-cluster-push-secret-reconciler=false
            - --concurrent=1
            - --metrics-addr=:8080
            - --loglevel=info
            - --zap-time-encoding=epoch
          image: ghcr.io/external-secrets/external-secrets:v2.0.1
          imagePullPolicy: IfNotPresent
          name: external-secrets
          ports:
            - containerPort: 8080
              name: metrics
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            seccompProfile:
              type: RuntimeDefault
      dnsPolicy: ClusterFirst
      hostNetwork: false
      serviceAccountName: external-secrets
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: external-secrets
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: external-secrets-cert-controller
    app.kubernetes.io/version: v2.0.1
    helm.sh/chart: external-secrets-2.0.1
  name: external-secrets-cert-controller
  namespace: external-secrets
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: external-secrets
      app.kubernetes.io/name: external-secrets-cert-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: external-secrets
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: external-secrets-cert-controller
        app.kubernetes.io/version: v2.0.1
        helm.sh/chart: external-secrets-2.0.1
        platform.io/capability-provider.monitoring-scrape: "true"
    spec:
      automountServiceAccountToken: true
      containers:
        - args:
            - certcontroller
            - --crd-requeue-interval=5m
            - --service-name=external-secrets-webhook
            - --service-namespace=external-secrets
            - --secret-name=external-secrets-webhook
            - --secret-namespace=external-secrets
            - --metrics-addr=:8080
            - --healthz-addr=:8081
            - --loglevel=info
            - --zap-time-encoding=epoch
            - --enable-partial-cache=true
          image: ghcr.io/external-secrets/external-secrets:v2.0.1
          imagePullPolicy: IfNotPresent
          name: cert-controller
          ports:
            - containerPort: 8080
              name: metrics
              protocol: TCP
            - containerPort: 8081
              name: ready
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /readyz
              port: ready
            initialDelaySeconds: 20
            periodSeconds: 5
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            seccompProfile:
              type: RuntimeDefault
      hostNetwork: false
      serviceAccountName: external-secrets-cert-controller
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: external-secrets
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: external-secrets-webhook
    app.kubernetes.io/version: v2.0.1
    helm.sh/chart: external-secrets-2.0.1
  name: external-secrets-webhook
  namespace: external-secrets
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: external-secrets
      app.kubernetes.io/name: external-secrets-webhook
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: external-secrets
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: external-secrets-webhook
        app.kubernetes.io/version: v2.0.1
        helm.sh/chart: external-secrets-2.0.1
        platform.io/capability-provider.monitoring-scrape: "true"
    spec:
      automountServiceAccountToken: true
      containers:
        - args:
            - webhook
            - --port=10250
            - --dns-name=external-secrets-webhook.external-secrets.svc
            - --cert-dir=/tmp/certs
            - --check-interval=5m
            - --metrics-addr=:8080
            - --healthz-addr=:8081
            - --loglevel=info
            - --zap-time-encoding=epoch
          image: ghcr.io/external-secrets/external-secrets:v2.0.1
          imagePullPolicy: IfNotPresent
          name: webhook
          ports:
            - containerPort: 8080
              name: metrics
              protocol: TCP
            - containerPort: 10250
              name: webhook
              protocol: TCP
            - containerPort: 8081
              name: ready
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /readyz
              port: ready
            initialDelaySeconds: 20
            periodSeconds: 5
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /tmp/certs
              name: certs
              readOnly: true
      hostNetwork: false
      serviceAccountName: external-secrets-webhook
      volumes:
        - name: certs
          secret:
            secretName: external-secrets-webhook
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/instance: external-secrets
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: external-secrets-webhook
    app.kubernetes.io/version: v2.0.1
    external-secrets.io/component: webhook
    helm.sh/chart: external-secrets-2.0.1
  name: externalsecret-validate
webhooks:
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: external-secrets-webhook
        namespace: external-secrets
        path: /validate-external-secrets-io-v1-externalsecret
    failurePolicy: Fail
    name: validate.externalsecret.external-secrets.io
    rules:
      - apiGroups:
          - external-secrets.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - externalsecrets
        scope: Namespaced
    sideEffects: None
    timeoutSeconds: 5
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/instance: external-secrets
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: external-secrets-webhook
    app.kubernetes.io/version: v2.0.1
    external-secrets.io/component: webhook
    helm.sh/chart: external-secrets-2.0.1
  name: secretstore-validate
webhooks:
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: external-secrets-webhook
        namespace: external-secrets
        path: /validate-external-secrets-io-v1-secretstore
    failurePolicy: Fail
    name: validate.secretstore.external-secrets.io
    rules:
      - apiGroups:
          - external-secrets.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - secretstores
        scope: Namespaced
    sideEffects: None
    timeoutSeconds: 5
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: external-secrets-webhook
        namespace: external-secrets
        path: /validate-external-secrets-io-v1-clustersecretstore
    name: validate.clustersecretstore.external-secrets.io
    rules:
      - apiGroups:
          - external-secrets.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - clustersecretstores
        scope: Cluster
    sideEffects: None
    timeoutSeconds: 5
